Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -122,14 +122,14 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
           &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              38 &          37 &          38 &                  -0.075 &  (-0.088, -0.062) & -0.061 &   (-0.073, -0.05) &                    -3.21 &  (-3.48, -2.94) & -3.71 &  (-3.95, -3.46) \\
-          & winter &              39 &          28 &          30 &                  -0.065 &   (-0.081, -0.05) & -0.055 &  (-0.065, -0.045) &                    -2.74 &  (-3.22, -2.25) & -3.14 &  (-3.39, -2.89) \\
-          & spring &              37 &          35 &          37 &                  -0.085 &  (-0.099, -0.072) & -0.061 &  (-0.072, -0.051) &                    -3.47 &   (-3.74, -3.2) & -3.92 &  (-4.12, -3.72) \\
-          & summer &              37 &          35 &          37 &                  -0.083 &  (-0.103, -0.063) & -0.073 &  (-0.092, -0.054) &                    -3.16 &  (-3.47, -2.84) & -4.03 &  (-4.36, -3.69) \\
+2000-2019 & all &              39 &          38 &          39 &                  -0.074 &  (-0.087, -0.062) & -0.061 &   (-0.072, -0.05) &                    -3.20 &  (-3.46, -2.93) & -3.70 &  (-3.94, -3.46) \\
+          & winter &              40 &          29 &          31 &                  -0.064 &   (-0.08, -0.049) & -0.055 &  (-0.065, -0.045) &                    -2.75 &  (-3.22, -2.28) & -3.15 &   (-3.39, -2.9) \\
+          & spring &              38 &          36 &          38 &                  -0.085 &  (-0.098, -0.072) & -0.061 &  (-0.071, -0.051) &                    -3.46 &  (-3.72, -3.19) & -3.91 &   (-4.1, -3.72) \\
+          & summer &              38 &          36 &          38 &                  -0.082 &  (-0.102, -0.063) & -0.073 &  (-0.092, -0.055) &                    -3.15 &  (-3.46, -2.85) & -4.04 &  (-4.37, -3.71) \\
           & autumn &              37 &          34 &          37 &                  -0.062 &   (-0.073, -0.05) & -0.053 &  (-0.063, -0.043) &                    -3.08 &   (-3.4, -2.76) & -3.50 &  (-3.72, -3.28) \\
 2005-2019 & all &              43 &          35 &          41 &                  -0.067 &  (-0.079, -0.055) & -0.051 &   (-0.06, -0.043) &                    -3.48 &  (-3.88, -3.09) & -3.86 &   (-4.11, -3.6) \\
 2010-2019 & all &              46 &          20 &          30 &                  -0.053 &  (-0.068, -0.038) & -0.043 &  (-0.054, -0.032) &                    -3.43 &  (-4.11, -2.75) & -4.22 &  (-4.89, -3.55) \\
-2000-2010 & all &              53 &          15 &          40 &                  -0.069 &  (-0.086, -0.052) & -0.091 &  (-0.105, -0.076) &                    -2.55 &   (-2.99, -2.1) & -4.15 &   (-4.5, -3.81) \\
+2000-2010 & all &              54 &          15 &          41 &                  -0.068 &  (-0.085, -0.051) & -0.090 &  (-0.104, -0.075) &                    -2.51 &  (-2.95, -2.07) & -4.13 &  (-4.47, -3.79) \\
 \bottomrule
 \end{tabular}}
 \end{center}
@@ -412,14 +412,14 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
           &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (mg $mm^{2} yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              47 &          14 &           8 &                    -6.1 &  (-10.4, -1.7) &  -4.5 &   (-7.6, -1.5) &                    -0.14 &  (-0.81, 0.52) & -0.40 &    (-0.7, -0.1) \\
-          & autumn &              46 &          10 &           5 &                    -6.6 &  (-11.6, -1.5) &  -5.0 &   (-8.9, -1.0) &                    -0.34 &  (-1.22, 0.53) & -0.40 &   (-0.83, 0.03) \\
-          & spring &              45 &           5 &           4 &                   -11.1 &  (-18.0, -4.2) &  -5.0 &   (-11.3, 1.3) &                    -0.28 &  (-0.97, 0.41) & -0.32 &   (-0.69, 0.05) \\
-          & summer &              46 &          10 &           5 &                    -8.4 &  (-14.7, -2.1) &  -7.2 &  (-10.6, -3.8) &                    -0.05 &  (-1.06, 0.95) & -0.43 &  (-0.78, -0.08) \\
-          & winter &              47 &           5 &           1 &                    -4.6 &   (-8.5, -0.7) &  -1.8 &    (-3.8, 0.2) &                    -0.00 &  (-0.79, 0.78) & -0.42 &  (-0.73, -0.11) \\
-2005-2019 & all &              55 &           9 &           4 &                    -3.7 &    (-9.4, 2.1) &  -3.1 &   (-6.1, -0.2) &                     0.01 &   (-0.8, 0.82) & -0.42 &  (-0.76, -0.08) \\
-2010-2019 & all &              65 &           4 &           4 &                    -1.3 &    (-7.6, 4.9) &  -5.2 &  (-10.4, -0.1) &                     1.06 &  (-0.75, 2.86) & -0.36 &   (-0.95, 0.23) \\
-2000-2010 & all &              49 &           5 &           3 &                    -4.8 &   (-13.9, 4.4) &  -2.5 &   (-10.2, 5.1) &                     0.21 &  (-0.85, 1.27) &  0.02 &   (-0.74, 0.78) \\
+2000-2019 & all &              44 &          13 &           8 &                    -7.4 &  (-11.8, -3.0) &  -4.6 &   (-7.9, -1.4) &                    -0.31 &   (-0.99, 0.37) & -0.38 &   (-0.7, -0.07) \\
+          & winter &              44 &           5 &           1 &                    -5.3 &   (-9.4, -1.3) &  -1.7 &    (-3.9, 0.4) &                    -0.25 &   (-0.94, 0.43) & -0.40 &  (-0.73, -0.08) \\
+          & spring &              42 &           5 &           3 &                   -12.2 &  (-19.4, -4.9) &  -4.7 &   (-11.4, 2.1) &                    -0.39 &    (-1.1, 0.31) & -0.25 &   (-0.63, 0.13) \\
+          & summer &              43 &           9 &           5 &                   -10.4 &  (-16.7, -4.1) &  -7.8 &  (-11.4, -4.2) &                    -0.12 &   (-1.17, 0.93) & -0.49 &  (-0.85, -0.12) \\
+          & autumn &              43 &          10 &           4 &                    -7.5 &  (-12.8, -2.3) &  -5.1 &   (-9.3, -0.9) &                    -0.45 &   (-1.37, 0.47) & -0.35 &    (-0.81, 0.1) \\
+2005-2019 & all &              52 &           8 &           4 &                    -4.8 &   (-10.7, 1.0) &  -3.3 &   (-6.4, -0.2) &                    -0.12 &   (-0.95, 0.71) & -0.44 &   (-0.8, -0.09) \\
+2010-2019 & all &              62 &           3 &           4 &                    -2.7 &    (-8.6, 3.1) &  -5.7 &  (-11.1, -0.4) &                     0.90 &   (-0.95, 2.75) & -0.42 &   (-1.02, 0.19) \\
+2000-2010 & all &              44 &           4 &           3 &                    -9.3 &  (-17.8, -0.8) &  -4.0 &   (-12.2, 4.2) &                    -0.36 &   (-1.24, 0.52) & -0.10 &    (-0.9, 0.71) \\
 \bottomrule
 \end{tabular}}
 \end{center}
@@ -448,14 +448,14 @@ Figure~\ref{fig:pm_trends} shows an overview of the annual and seasonal observed
           &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              36 &          29 &          35 &                   -0.37 &   (-0.44, -0.3) & -0.28 &  (-0.31, -0.24) &                    -1.86 &   (-2.12, -1.6) & -1.91 &  (-2.08, -1.74) \\
-          & winter &              33 &          18 &          19 &                   -0.37 &  (-0.48, -0.26) & -0.27 &  (-0.32, -0.22) &                    -1.76 &   (-2.1, -1.42) & -1.69 &  (-1.89, -1.49) \\
-          & spring &              33 &          24 &          31 &                   -0.40 &  (-0.48, -0.32) & -0.29 &  (-0.34, -0.25) &                    -1.89 &  (-2.15, -1.64) & -2.04 &  (-2.23, -1.84) \\
-          & summer &              35 &          27 &          31 &                   -0.34 &  (-0.43, -0.26) & -0.30 &  (-0.36, -0.25) &                    -1.74 &  (-2.12, -1.36) & -2.22 &  (-2.45, -1.98) \\
-          & autumn &              34 &          21 &          28 &                   -0.35 &  (-0.43, -0.26) & -0.28 &  (-0.32, -0.24) &                    -1.82 &  (-2.12, -1.52) & -1.84 &  (-2.02, -1.65) \\
-2005-2019 & all &              53 &          29 &          36 &                   -0.33 &  (-0.41, -0.25) & -0.22 &  (-0.26, -0.18) &                    -1.86 &  (-2.27, -1.45) & -1.78 &  (-2.04, -1.52) \\
-2010-2019 & all &              55 &          17 &          25 &                   -0.32 &  (-0.43, -0.22) & -0.17 &  (-0.22, -0.12) &                    -1.87 &  (-2.49, -1.25) & -1.49 &   (-1.88, -1.1) \\
-2000-2010 & all &              35 &          13 &          22 &                   -0.47 &  (-0.57, -0.36) & -0.32 &  (-0.42, -0.22) &                    -2.38 &   (-2.8, -1.96) & -2.26 &  (-2.86, -1.67) \\
+2000-2019 & all &              37 &          29 &          36 &                   -0.36 &  (-0.43, -0.29) & -0.27 &  (-0.31, -0.24) &                    -1.83 &  (-2.09, -1.57) & -1.92 &  (-2.08, -1.75) \\
+          & autumn &              35 &          22 &          29 &                   -0.34 &  (-0.42, -0.26) & -0.27 &  (-0.31, -0.24) &                    -1.81 &   (-2.1, -1.51) & -1.85 &  (-2.03, -1.67) \\
+          & spring &              34 &          24 &          32 &                   -0.39 &  (-0.47, -0.31) & -0.29 &  (-0.34, -0.25) &                    -1.84 &  (-2.11, -1.56) & -2.04 &  (-2.23, -1.86) \\
+          & summer &              36 &          27 &          32 &                   -0.34 &  (-0.42, -0.25) & -0.30 &  (-0.35, -0.24) &                    -1.72 &  (-2.09, -1.35) & -2.22 &  (-2.44, -1.99) \\
+          & winter &              34 &          18 &          20 &                   -0.36 &  (-0.47, -0.25) & -0.27 &  (-0.32, -0.22) &                    -1.73 &   (-2.07, -1.4) & -1.69 &   (-1.88, -1.5) \\
+2005-2019 & all &              54 &          29 &          37 &                   -0.33 &  (-0.41, -0.25) & -0.22 &  (-0.26, -0.19) &                    -1.82 &  (-2.23, -1.41) & -1.80 &  (-2.05, -1.54) \\
+2010-2019 & all &              56 &          17 &          26 &                   -0.32 &  (-0.42, -0.21) & -0.17 &  (-0.22, -0.13) &                    -1.84 &  (-2.45, -1.23) & -1.51 &   (-1.9, -1.12) \\
+2000-2010 & all &              36 &          14 &          23 &                   -0.46 &  (-0.56, -0.36) & -0.32 &  (-0.42, -0.22) &                    -2.36 &  (-2.77, -1.95) & -2.25 &  (-2.83, -1.68) \\
 \bottomrule
 \end{tabular}}
 \end{center}
@@ -470,14 +470,14 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
           &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              18 &          16 &          18 &                   -0.31 &   (-0.4, -0.21) & -0.25 &   (-0.3, -0.21) &                    -2.51 &  (-2.91, -2.12) & -2.51 &   (-2.73, -2.3) \\
-          & winter &              17 &          12 &          13 &                   -0.38 &   (-0.57, -0.2) & -0.21 &  (-0.26, -0.17) &                    -2.41 &  (-2.81, -2.01) & -2.11 &  (-2.41, -1.81) \\
-          & spring &              18 &          14 &          18 &                   -0.34 &  (-0.43, -0.25) & -0.26 &   (-0.3, -0.21) &                    -2.58 &  (-2.98, -2.18) & -2.64 &  (-2.84, -2.44) \\
-          & summer &              17 &          14 &          16 &                   -0.27 &   (-0.34, -0.2) & -0.28 &  (-0.35, -0.22) &                    -2.45 &    (-3.0, -1.9) & -2.79 &  (-3.14, -2.44) \\
-          & autumn &              17 &          12 &          15 &                   -0.27 &  (-0.38, -0.16) & -0.24 &  (-0.32, -0.17) &                    -2.34 &  (-2.79, -1.88) & -2.25 &  (-2.49, -2.01) \\
-2005-2019 & all &              35 &          23 &          26 &                   -0.34 &  (-0.43, -0.25) & -0.21 &  (-0.25, -0.16) &                    -2.77 &  (-3.24, -2.31) & -2.27 &  (-2.51, -2.02) \\
-2010-2019 & all &              42 &          20 &          18 &                   -0.35 &  (-0.44, -0.26) & -0.19 &  (-0.24, -0.14) &                    -3.18 &   (-3.75, -2.6) & -2.24 &  (-2.68, -1.81) \\
-2000-2010 & all &              19 &           7 &          12 &                   -0.36 &  (-0.52, -0.21) & -0.35 &  (-0.44, -0.25) &                    -2.66 &   (-3.63, -1.7) & -2.93 &  (-3.59, -2.27) \\
+2000-2019 & all &              19 &          16 &          19 &                   -0.29 &   (-0.39, -0.2) & -0.25 &  (-0.29, -0.21) &                    -2.42 &   (-2.84, -2.0) & -2.50 &  (-2.71, -2.29) \\
+          & winter &              18 &          12 &          14 &                   -0.36 &  (-0.54, -0.18) & -0.21 &  (-0.25, -0.17) &                    -2.29 &  (-2.74, -1.85) & -2.11 &  (-2.39, -1.83) \\
+          & spring &              19 &          14 &          19 &                   -0.32 &  (-0.41, -0.24) & -0.26 &   (-0.3, -0.22) &                    -2.47 &  (-2.91, -2.03) & -2.64 &  (-2.82, -2.45) \\
+          & summer &              18 &          14 &          17 &                   -0.26 &  (-0.33, -0.19) & -0.28 &  (-0.35, -0.22) &                    -2.36 &  (-2.91, -1.82) & -2.78 &  (-3.12, -2.45) \\
+          & autumn &              18 &          12 &          16 &                   -0.26 &  (-0.36, -0.15) & -0.24 &  (-0.31, -0.17) &                    -2.22 &  (-2.71, -1.74) & -2.24 &  (-2.47, -2.01) \\
+2005-2019 & all &              36 &          23 &          27 &                   -0.33 &  (-0.42, -0.23) & -0.21 &  (-0.25, -0.17) &                    -2.66 &  (-3.16, -2.16) & -2.28 &  (-2.53, -2.04) \\
+2010-2019 & all &              43 &          20 &          19 &                   -0.34 &  (-0.43, -0.25) & -0.19 &  (-0.24, -0.14) &                    -3.14 &   (-3.7, -2.57) & -2.28 &  (-2.71, -1.85) \\
+2000-2010 & all &              20 &           7 &          13 &                   -0.36 &   (-0.5, -0.21) & -0.34 &  (-0.43, -0.25) &                    -2.65 &  (-3.56, -1.73) & -2.88 &  (-3.51, -2.25) \\
 \bottomrule
 \end{tabular}}
 \end{center}
@@ -487,10 +487,10 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 For the whole period, 36 and 18 sites with satisfactory data coverage have been included in the trend analysis respectively for \PM[10] and \PM[2.5]. The annual series of \PM[10] and \PM[2.5] clearly show a general concentration decrease from 2000 to 2019. In general, the model reproduces quite well observed year-to-year changes in \PM[10] and \PM[2.5], including enhanced PM levels due to meteorological conditions e.g. in 2003 (dry hot summer \citep{EMEP:PM2005}) and 2011 (dry year in Western/Central/Southern Europe \citep{EMEP:PM2013}).
 
 Summarizing overall results, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing for the 2000-2019 period (and for all considered here periods). In relative terms, \PM[2.5] average decreasing trend was larger than that for \PM[10]. The PM trends can be explained by decreases in the concentrations of the individual components due to emission reductions, with \PM[10] trends experiencing larger disturbances due to natural contribution in the coarse fraction. We find a good correspondence between observed and model simulated trends in PM concentrations at the considered sites. A more detailed discussion of PM trends follows below.
-In the period of 2000-2019, the average observed \PM[10] trends are -0.37 \ug $yr^{-1}$, or -1.86 \% $yr^{-1}$ in relative terms. The corresponding \PM[10] trends from model simulations are -0.28 \ug $yr^{-1}$ and -1.91 \% $yr^{-1}$.
+In the period of 2000-2019, the average observed \PM[10] trends are -0.37 \ug $yr^{-1}$, or -1.86 \% $yr^{-1}$ in relative terms. The corresponding \PM[10] trends from model simulations are -0.28 \ug $yr^{-1}$ and -1.91 \% $yr^{-1}$. For \PM[2.5], the average trends are -0.31 and -0.25 \ug $yr^{-1}$ respectively from the observations and model simulations, and the relative decrease of \PM[2.5] is -2.51 \% $yr^{-1}$, both observed and modelled. 
 
 
--0.37 and -0.31 \ug $yr^{-1}$ for \PM[10] and \PM[2.5]; the modelled ones are somewhat smaller, i.e. -0.28 and -0.25 \ug $yr^{-1}$ respectively (partly due to model underestimation of PM concentration). The model simulated relative trends are -1.91 and -2.51 \% $yr^{-1}$ for \PM[10] and \PM[2.5], which agree well with observed -1.86 and -2.51 \% $yr^{-1})$, respectively. Significant trends have been derived from the observational data for 80 \% of sites for \PM[10] and 97 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively.  
+Significant trends have been derived from the observational data for 80 \% of sites for \PM[10] and 97 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively.  
 
 Figure \ref{fig:pm_trends} reveals a considerably larger variation of observed trends between the sites in comparison to modelled trend values, \textcolor{blue}{with modelled median (and mean) trends lying within 25-75\% interquartile range (IQR) of the observed ones. Modelled mean and median trends are in general closer to each other than in the observational data, implying more sites-outliers.} The model simulated the largest \PM[10] and \PM[2.5] 2000-2019 trends, both absolute and relative,  for the summer season, followed by the spring, whereas the observation results are less conclusive in this respect. However, both the observations and the model identify PM significant trends for more stations for the spring and summer seasons than for the winter-autumn. 
 
