--- a/chapterTrendsECOC.tex
+++ b/chapterTrendsECOC.tex
@@ -35,7 +35,7 @@ highest EC levels, i.e., at Iskrba (-7\%/yr) in Slovenia and at Ispra
 (-5.8\%/yr) in the Po Valley region in Northern Italy. Notably, these
 were the only sites where a statistically significant reduction was
 observed for all seasons, being most pronounced in summer, although
-by a short margin. When considering all sites, the reduction was most
+by a small margin. When considering all sites, the reduction was most
 pronounced in summer and fall (Tab.~\ref{tab:KEX1}), but the general picture is
 that there is a minor seasonal variability in the reduction of EC,
 reflecting minor seasonal variability in most EC sources, except from
@@ -50,12 +50,12 @@ levoglucosan observed at the Birkenes Observatory for 2010-2020, which is
 higher than the -4.2\%/yr calculated for EC, suggesting that abatement
 of carbonaceous aerosol from biomass burning has been equally successful
 as that of EC from fossil fuel sources, contradicting the conclusion made
-by \citet{Yttri2021}.   As the biomass burning emissions observed at the
+by \citet{Yttri2021} \COMMENT{DS: I would be careful with the word contradict. These time-series are not long, and as you show, one can get -2.8\% or -5.2 depending on starting year!}.   As the biomass burning emissions observed at the
 Birkenes Observatory is largely long-range transported from Continental
 Europe and Western Russia \citep{Yttri2021}, our finding for Birkenes
 is likely to be representative for a larger part of Europe. However,
 caution should be made drawing firm conclusions from such short time
-series as those presented here, illustrated by the different reductions
+series as those presented here\COMMENT{ Yes!}, illustrated by the different reductions
 calculated for levoglucosan for 2008--2018 and for 2010--2020.
 
 A statistically significant downward trend of similar magnitude
@@ -210,9 +210,9 @@ more efficiently abated than the overall PM mass concentration. The model
 calculated a comparable -1.7$\pm$1.3\%/yr reduction for the EC/\pmfine ratio
 but predicted a minor increase at two of the sites, which was not seen for
 observed EC/\pmfine ratios. For the few sites where measurements allow for
-a harmonized data set of EC, OC, \ce{SO42-} and \pmfine, i.e., only including
+a harmonized data set of EC, OC, \ce{SO4^2-} and \pmfine, i.e., only including
 measurements on common days, the reduction in the EC fraction of \pmfine
-was typically equally high or higher than for the \ce{SO42-} fraction. The
+was typically equally high or higher than for the \ce{SO4^2-} fraction. The
 OC fraction of \pmfine showed no decrease or increase (0.2$\pm$2.8\%/yr)
 for 2010--2020 when considering all sites, which largely is explained by
 non-abatable natural sources making up a major part of OC. A substantial
@@ -235,7 +235,7 @@ OC/\pmfine.
 \begin{figure}
  \caption{
   Mass balance of \pmfine at Ispra (IT04), Birkenes (NO02), Diabla Gora
-  (PL05) and Iskrba (SI08) including OM, EC, SO42-, NO3-, NH4+ and mineral
+  (PL05) and Iskrba (SI08) including OM, EC, \ce{SO4^2-}, \ce{NO3^-}, \ce{NH4^+} and mineral
   dust (MD) (IT04 and SI08 only) (left panel) and apportionment of eBC
   into biomass burning/solid fuel (eBCbb) and fossil fuel/liquid fuel
   (eBCff) for winter 2017/2018 (right panel). \label{fig:KEX4}
@@ -266,19 +266,22 @@ apportionment of eBC can also be used to infer the corresponding fractions
 of OM.
 
 \begin{table}
+\centering
+\parbox{14cm}{
  \caption{
    Absolute change (\ugC/yr) and relative change (\%/yr) and corresponding
    confidence intervals in observed and modeled annual and seasonal
    aggregated OC/\pmfine and EC/\pmfine ratios at 15 sites across Europe
    for 2010--2020. The number of sites with a significant outcome
    is provided.\label{tab:KEX3}
- }
- \scalebox{0.70}{%
+ }}
+ \scalebox{0.95}{%
  \begin{tabular}{lcccccc}
 \hline  % toprule
  &  &  &  &  &  &  \\
 \multicolumn{7}{c}{EC/\pmfine (2010--2020)} \\
   &  &  &  &  &  &  \\
+  \hline
      \multicolumn{3}{c}{Number of sites} & \multicolumn{2}{l}{Average change per year} & \multicolumn{2}{l}{Relative change per year} \\
 {} &           total & sign. &                     abs &       Conf. interv. &                      \%/y &   Conf. interv. \\
 %How   &                 &       &                         &                     &                          &                 \\
@@ -302,6 +305,10 @@ Obs.  &              15 &     2 &                  0.0001 &  (-0.003, 0.0032) & 
 \end{tabular}
 } % end scalebox
 \end{table}
+
+\subsection{Issues with inventories used in modelling}
+
+\COMMENT{Dave will add text on condensables and EC/OC/remPPM splits - these will affect modelled trends, and add more caveats.}
 
 \subsection{Conclusion}
 \label{ss:trendsECOCconc}
