--- a/chapterTrendsECOC.tex
+++ b/chapterTrendsECOC.tex
@@ -182,6 +182,27 @@ autumn &              15 &          1 &           0 &                  -0.098 & 
 \end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+\includegraphics*[height=6cm,trim=1cm 0 0 0]{FIGS_TRENDS/Plot_ec_rel_summer_Model.png}%
+\includegraphics*[height=6cm,trim=2cm 0 2cm 0]{FIGS_TRENDS/Plot_ec_rel_summer_Observations.png}
+\\
+\includegraphics*[height=6cm,trim=1cm 0 0 0]{FIGS_TRENDS/Plot_ec_rel_winter_Model.png}%
+\includegraphics*[height=6cm,trim=2cm 0 2.5cm 0]{FIGS_TRENDS/Plot_ec_rel_winter_Observations.png}
+\caption{PRELIM EC trends. Left = model, right = obs. Top = summer, bottom = winter}
+\end{figure}
+
+\begin{figure}
+\includegraphics*[height=6cm,trim=1cm 0 0 0]{FIGS_TRENDS/Plot_oc_rel_summer_Model.png}%
+\includegraphics*[height=6cm,trim=2cm 0 2cm 0]{FIGS_TRENDS/Plot_oc_rel_summer_Observations.png}
+\\
+\includegraphics*[height=6cm,trim=1cm 0 0 0]{FIGS_TRENDS/Plot_oc_rel_winter_Model.png}%
+\includegraphics*[height=6cm,trim=2cm 0 2.5cm 0]{FIGS_TRENDS/Plot_oc_rel_winter_Observations.png}
+\caption{PRELIM OC trends. Left = model, right = obs. Top = summer, bottom = winter}
+\end{figure}
+
+
+
+%%%%%%%%%%%%%%%%%%
 
 \subsection{OC and EC fractions of PM}
 \label{ss:OCECfrac}
