Update on Overleaf.

--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -3,7 +3,7 @@
 
 %% authors? added all names seen in Log.changes
 
-{\bf{David Simpson, Michael Gauss, Qing Mu, Svetlana Tsyro and Peter Wind}}
+{\bf{David Simpson, Michael Gauss, Qing Mu, Svetlana Tsyro, Alvaro Valdebenito and Peter Wind}}
 \vspace{30pt}
 
 %\old{TODO}
@@ -15,7 +15,7 @@ since \citet{R2020:ModDev}, and along with changes discussed in
 updates the standard description given in \citet{Simpson:EMEP2012}. The
 model version used for reporting this year is denoted rv4.42, which has
 had some major updates (especially with regard to emissions) compared to
-the rv4.35 reported in \citet{R2020:ModDev}.
+the rv4.35 version reported in \citet{R2020:ModDev}.
 Table~\ref{tab:Updates} summarises
 the changes made in the EMEP model since the version documented in
 \citet{Simpson:EMEP2012}, and these changes are discussed in
@@ -162,15 +162,15 @@ Notes: (a) R2018 refers to EMEP Status report 1/2018, etc.
 \item Introduced new soil-NO, DMS and aircraft emissions, from CAMS-81 project
 (Sect.~\ref{sec:updateEmis}). 
 
-\item Revised methods for vertical diffusion (Kz) \QUERY{and Hmix?} (Sect.~\ref{sec:updateKz}). -- Qing
+\item Revised methods for vertical diffusion (Kz) and Hmix (Sect.~\ref{sec:updateKz}).
 
 \item Modified fine/coarse split of sea-salt (Sect.~\ref{ssec:updateSS}).
 
 \item
 Upgraded Local Fractions capabilities (Sect.~\ref{sec:updateLF}).
 
-\item  fracPM25 stuff (Sect.~\ref{sec:updateOther}). -- Dave
-\item revised wet-radius calculations (Sect.~\ref{sec:updateOther}). --Dave
+\item Chabged fraction of coarse nitrate included in PM25 stuff (Sect.~\ref{sec:updateOther}). -- Dave
+%\item revised wet-radius calculations (Sect.~\ref{sec:updateOther}). --Dave
 
 %\item The EMEP model's chemical pre-processing system and associated box-model (GenChem, boxChem) have been released as open-source.  See Sect.~\ref{sec:GChem}.
 
