Update on Overleaf.

--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -167,21 +167,24 @@ Notes: (a) R2018 refers to EMEP Status report 1/2018, etc.
 \item Modified fine/coarse split of sea-salt (Sect.~\ref{ssec:updateSS}).
 
 \item
+Emissions speciation. New default and country-specific emission
+speciations for \pmfine have been implemented.  See
+Sect.~\ref{ssec:emissplits}.
+
+\item
+New cou
+\item
 Upgraded Local Fractions capabilities (Sect.~\ref{sec:updateLF}).
 
-\item Chabged fraction of coarse nitrate included in PM25 stuff (Sect.~\ref{sec:updateOther}). -- Dave
+\item Changed fraction of coarse nitrate included in PM25 stuff (Sect.~\ref{sec:updateOther}). -- Dave
 %\item revised wet-radius calculations (Sect.~\ref{sec:updateOther}). --Dave
 
 %\item The EMEP model's chemical pre-processing system and associated box-model (GenChem, boxChem) have been released as open-source.  See Sect.~\ref{sec:GChem}.
 
-\item
-Emissions speciation. New default and country-specific emission
-speciations for NMVOC and \pmfine have been implemented.  See
-Sect.~\ref{ssec:emissplits}.
 
 \item
 Numerous small changes to make the code more flexible and/or to
-fix minor bugs.
+fix various bugs.
 
 \end{itemize}
 
